--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -5,7 +5,7 @@ on: [push, pull_request]
 jobs:
   build:
     permissions:
-      contents: write # to push pages branch (peaceiris/actions-gh-pages)
+      contents: write # to push pages branch (peaceiris/actions-gh-pages) TODO PaM: Kell?
 
     name: ${{ matrix.config.name }}
     runs-on: ${{ matrix.config.os }}
@@ -29,73 +29,14 @@ jobs:
     - name: Checkout doxygen
       uses: actions/checkout@v3
       with:
-        fetch-depth: 0
-      
-#    - name: Download MikTex (Windows)
-#      run: |
-#        $wc = New-Object System.Net.WebClient;
-#        $maxAttempts=5;
-#        $attemptCount=0;
-#        Do {
-#          $attemptCount++;
-#          Try {
-#            $wc.DownloadFile("https://ctan.math.illinois.edu/systems/win32/miktex/setup/windows-x64/miktexsetup-5.2.0+b8f430f-x64.zip","miktexsetup-5.2.0+b8f430f-x64.zip")
-#          } Catch [Exception] {
-#            Write-Host $_.Exception | format-list -force
-#          }
-#        } while (((Test-Path "miktexsetup-5.2.0+b8f430f-x64.zip") -eq $false) -and ($attemptCount -le $maxAttempts))  
-#      shell: pwsh
-#      if: matrix.config.os == 'windows-latest'
-      
+        fetch-depth: 0 
+ 
     - name: Install libiconv (Windows)
       uses: suisei-cn/actions-download-file@v1
       with: 
         url: "https://github.com/pffang/libiconv-for-Windows/releases/download/v1.16/libiconv-for-Windows_1.16.7z"
         target: .  
       if: matrix.config.os == 'windows-latest'
-
-    - name: Install LaTeX (MacOS)
-      run: |
-        brew update
-        brew install --cask mactex;
-        echo "/Library/TeX/texbin/" >> $GITHUB_PATH
-      if: matrix.config.os == 'macos-latest'
-          
-#    - name: Extract MikTex zip (Windows)
-#      shell: bash
-#      run: |
-#        unzip miktexsetup-5.2.0+b8f430f-x64.zip
-#      if: matrix.config.os == 'windows-latest'
-#
-#    - name: Download MikTex packages (Windows)
-#      shell: bash
-#      run: |
-#        ./miktexsetup_standalone --verbose \
-#                      --local-package-repository="C:/miktex-repository" \
-#                      --remote-package-repository="https://ctan.math.illinois.edu/systems/win32/miktex/tm/packages/" \
-#                      --package-set=essential \
-#                      download
-#      if: matrix.config.os == 'windows-latest'
-#
-#    - name: Install MikTex packages (Windows)
-#      shell: bash
-#      run: |
-#        ./miktexsetup_standalone --local-package-repository="C:/miktex-repository" \
-#                      --verbose \
-#                      --package-set=essential \
-#                      --shared \
-#                      install
-#      if: matrix.config.os == 'windows-latest'
-#
-#    - name: Setting MikTex paths (Windows)
-#      shell: bash
-#      run: |
-#        echo "C:/Program Files/MiKTeX/miktex/bin/x64/" >> $GITHUB_PATH
-#        export PATH="/c/Program Files/MiKTeX/miktex/bin/x64/:$PATH"
-#        
-#        echo "Configuring MiKTeX to install missing packages on the fly"
-#        initexmf --admin --verbose --set-config-value='[MPM]AutoInstall=1'
-#      if: matrix.config.os == 'windows-latest'
 
     - name: Install LaTeX (Windows)
       uses: teatimeguest/setup-texlive-action@v2
@@ -158,11 +99,6 @@ jobs:
         choco install graphviz.portable
       if: matrix.config.os == 'windows-latest'
 
-#    - name: Install Perl (Windows)
-#      run:
-#        choco install activeperl
-#      if: matrix.config.os == 'windows-latest'
-
     - name: Setup VS Environment (Windows)
       uses: seanmiddleditch/gha-setup-vsdevenv@master
       if: matrix.config.os == 'windows-latest'
@@ -171,9 +107,6 @@ jobs:
       run:
         refreshenv
       if: matrix.config.os == 'windows-latest'
-    
-    - name: Install Qt
-      uses: jurplel/install-qt-action@v3
     
     - name: Check tool versions (Linux / MacOS)
       shell: bash
@@ -184,12 +117,6 @@ jobs:
         python --version;
         echo "=== cmake ===";
         cmake --version;
-        echo "=== latex ===";
-        latex --version;
-        echo "=== bibtex ===";
-        bibtex --version
-        echo "=== dvips ===";
-        dvips --version
         echo "=== bison ===";
         bison --version;
         echo "=== flex ===";
@@ -238,7 +165,7 @@ jobs:
             -D CMAKE_BUILD_TYPE=${{ matrix.config.build_type }}
             -G "${{ matrix.config.build_gen }}"
             -Dbuild_doc=YES
-            -Dbuild_wizard=YES
+            -Dbuild_for_code_sign=NO
             ${{ matrix.config.cmake_extra_opts }}            
           RESULT_VARIABLE result
         )
