--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -5,7 +5,7 @@ on: [push, pull_request]
 jobs:
   build:
     permissions:
-      contents: write # to push pages branch (peaceiris/actions-gh-pages) TODO PaM: Kell?
+      contents: write # to push pages branch (peaceiris/actions-gh-pages)
 
     name: ${{ matrix.config.name }}
     runs-on: ${{ matrix.config.os }}
@@ -14,32 +14,53 @@ jobs:
       matrix:
         config:
         - {
-            name: "macOS Latest Release",
-            os: macos-latest,
+            name: "macOS Latest Release (Intel)",
+            os: macos-13,
             build_type: "Release", cc: "clang", cxx: "clang++",
             build_gen: "Unix Makefiles"
           }
+#        - {
+#            name: "macOS Latest Release (Apple Silicon)",
+#            os: macos-14-arm64,
+#            build_type: "Release", cc: "clang", cxx: "clang++",
+#            build_gen: "Unix Makefiles"
+#          }
+#        - {
+#            name: "macOS Latest Debug (Apple Silicon)",
+#            os: macos-14-arm64,
+#            build_type: "Debug", cc: "clang", cxx: "clang++",
+#            build_gen: "Unix Makefiles"
+#          }
         - {
-            name: "Windows Latest MSVC Release", 
+            name: "Windows Latest MSVC Release",
             os: windows-latest,
             build_type: "Release", cc: "cl", cxx: "cl",
             build_gen: "NMake Makefiles"
           }
     steps:
     - name: Checkout doxygen
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
-        fetch-depth: 0 
- 
+        fetch-depth: 0
+
     - name: Install libiconv (Windows)
       uses: suisei-cn/actions-download-file@v1
-      with: 
+      with:
         url: "https://github.com/pffang/libiconv-for-Windows/releases/download/v1.16/libiconv-for-Windows_1.16.7z"
-        target: .  
+        target: .
       if: matrix.config.os == 'windows-latest'
 
+    - name: Install LaTeX (MacOS)
+      run: |
+        brew update
+        brew install --cask mactex;
+        echo "/Library/TeX/texbin/" >> $GITHUB_PATH
+      if: matrix.config.os == 'macos-13'
+
+
+
     - name: Install LaTeX (Windows)
-      uses: teatimeguest/setup-texlive-action@v2
+      uses: teatimeguest/setup-texlive-action@v3
       with:
         packages: >-
           scheme-medium
@@ -48,7 +69,7 @@ jobs:
           cjk
           bibtex
       if: matrix.config.os == 'windows-latest'
-    
+
     - name: Install Ghostscript (Windows)
       run:
         choco install ghostscript
@@ -65,21 +86,24 @@ jobs:
 
     - name: Install xmllint (MacOS)
       run: |
+         brew install --force --overwrite python@3.11 # temp hack
+         brew install --force --overwrite python@3.12 # temp hack
          brew update
          brew install libxml2
-      if: matrix.config.os == 'macos-latest'
+      if: matrix.config.os == 'macos-13'
 
     - name: Install bison (MacOS)
       run: |
         brew update
         brew install bison;
-        echo "/usr/local/opt/bison/bin" >> $GITHUB_PATH
-      if: matrix.config.os == 'macos-latest'
-    
+        echo "$(brew --prefix bison)/bin" >> $GITHUB_PATH
+        #echo "/usr/local/opt/bison/bin" >> $GITHUB_PATH
+      if: matrix.config.os == 'macos-13'
+
     - name: Install bison/flex (Windows)
       run: |
-        Choco-Install -PackageName winflexbison 
-        #choco install winflexbison
+        #Choco-Install -PackageName winflexbison
+        choco install winflexbison
       if: matrix.config.os == 'windows-latest'
 
     - name: Install Graphviz (MacOS)
@@ -92,7 +116,7 @@ jobs:
           # Try again
           brew install graphviz
         fi
-      if: matrix.config.os == 'macos-latest'
+      if: matrix.config.os == 'macos-13'
 
     - name: Install Graphviz (Windows)
       run:
@@ -104,10 +128,23 @@ jobs:
       if: matrix.config.os == 'windows-latest'
 
     - name: Refresh Env (Windows)
-      run:
+      run: |
+        Import-Module $env:ChocolateyInstall\helpers\chocolateyProfile.psm1
         refreshenv
       if: matrix.config.os == 'windows-latest'
-    
+
+    - name: Install Qt 6
+      uses: jurplel/install-qt-action@v4
+      with:
+        version: 6.2.*
+      if: matrix.config.is == 'macos-13'
+
+    - name: Install Qt 5
+      uses: jurplel/install-qt-action@v4
+      with:
+        version: 5.*
+      if: matrix.config.is != 'macos-13'
+
     - name: Check tool versions (Linux / MacOS)
       shell: bash
       run: |
@@ -117,6 +154,12 @@ jobs:
         python --version;
         echo "=== cmake ===";
         cmake --version;
+        echo "=== latex ===";
+        latex --version;
+        echo "=== bibtex ===";
+        bibtex --version
+        echo "=== dvips ===";
+        dvips --version
         echo "=== bison ===";
         bison --version;
         echo "=== flex ===";
@@ -165,8 +208,8 @@ jobs:
             -D CMAKE_BUILD_TYPE=${{ matrix.config.build_type }}
             -G "${{ matrix.config.build_gen }}"
             -Dbuild_doc=YES
-            -Dbuild_for_code_sign=NO
-            ${{ matrix.config.cmake_extra_opts }}            
+            -Dbuild_wizard=YES
+            ${{ matrix.config.cmake_extra_opts }}
           RESULT_VARIABLE result
         )
         if (NOT result EQUAL 0)
@@ -179,7 +222,7 @@ jobs:
         include(ProcessorCount)
         ProcessorCount(N)
         execute_process(
-          COMMAND cmake --build build --parallel ${N} 
+          COMMAND cmake --build build --parallel ${N}
           RESULT_VARIABLE result
           OUTPUT_VARIABLE output
           ERROR_VARIABLE output
@@ -193,7 +236,7 @@ jobs:
         endif()
 
     - name: Archive build artifacts
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4
       with:
         name: "${{ matrix.config.name }} build artifacts"
         path: build/bin/
