--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -19,18 +19,12 @@ jobs:
             build_type: "Release", cc: "clang", cxx: "clang++",
             build_gen: "Unix Makefiles"
           }
-#        - {
-#            name: "macOS Latest Release (Apple Silicon)",
-#            os: macos-14-arm64,
-#            build_type: "Release", cc: "clang", cxx: "clang++",
-#            build_gen: "Unix Makefiles"
-#          }
-#        - {
-#            name: "macOS Latest Debug (Apple Silicon)",
-#            os: macos-14-arm64,
-#            build_type: "Debug", cc: "clang", cxx: "clang++",
-#            build_gen: "Unix Makefiles"
-#          }
+        - {
+            name: "macOS Latest Release (Apple Silicon)",
+            os: macos-latest,
+            build_type: "Release", cc: "clang", cxx: "clang++",
+            build_gen: "Unix Makefiles"
+          }
         - {
             name: "Windows Latest MSVC Release",
             os: windows-latest,
@@ -42,6 +36,12 @@ jobs:
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
+
+    - name: Check MAC CPU Architecture
+      shell: bash
+      run: |
+        uname -m
+      if: matrix.config.os != 'windows-latest'
 
     - name: Install libiconv (Windows)
       uses: suisei-cn/actions-download-file@v1
@@ -132,18 +132,6 @@ jobs:
         Import-Module $env:ChocolateyInstall\helpers\chocolateyProfile.psm1
         refreshenv
       if: matrix.config.os == 'windows-latest'
-
-    - name: Install Qt 6
-      uses: jurplel/install-qt-action@v4
-      with:
-        version: 6.2.*
-      if: matrix.config.is == 'macos-13'
-
-    - name: Install Qt 5
-      uses: jurplel/install-qt-action@v4
-      with:
-        version: 5.*
-      if: matrix.config.is != 'macos-13'
 
     - name: Check tool versions (Linux / MacOS)
       shell: bash
