--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -55,7 +55,7 @@ jobs:
         brew update
         brew install --cask mactex;
         echo "/Library/TeX/texbin/" >> $GITHUB_PATH
-      if: matrix.config.os == 'macos-13'
+      if: matrix.config.os != 'windows-latest'
 
 
 
@@ -90,7 +90,7 @@ jobs:
          brew install --force --overwrite python@3.12 # temp hack
          brew update
          brew install libxml2
-      if: matrix.config.os == 'macos-13'
+      if: matrix.config.os != 'windows-latest'
 
     - name: Install bison (MacOS)
       run: |
@@ -98,7 +98,7 @@ jobs:
         brew install bison;
         echo "$(brew --prefix bison)/bin" >> $GITHUB_PATH
         #echo "/usr/local/opt/bison/bin" >> $GITHUB_PATH
-      if: matrix.config.os == 'macos-13'
+      if: matrix.config.os != 'windows-latest'
 
     - name: Install bison/flex (Windows)
       run: |
@@ -116,7 +116,7 @@ jobs:
           # Try again
           brew install graphviz
         fi
-      if: matrix.config.os == 'macos-13'
+      if: matrix.config.os != 'windows-latest'
 
     - name: Install Graphviz (Windows)
       run:
@@ -196,7 +196,6 @@ jobs:
             -D CMAKE_BUILD_TYPE=${{ matrix.config.build_type }}
             -G "${{ matrix.config.build_gen }}"
             -Dbuild_doc=YES
-            -Dbuild_wizard=YES
             ${{ matrix.config.cmake_extra_opts }}
           RESULT_VARIABLE result
         )
