--- a/.github/workflows/build_cmake.yml
+++ b/.github/workflows/build_cmake.yml
@@ -13,18 +13,18 @@ jobs:
       fail-fast: false
       matrix:
         config:
-        - {
-            name: "macOS Latest Release (Intel)",
-            os: macos-13,
-            build_type: "Release", cc: "clang", cxx: "clang++",
-            build_gen: "Unix Makefiles"
-          }
-        - {
-            name: "macOS Latest Release (Apple Silicon)",
-            os: macos-latest,
-            build_type: "Release", cc: "clang", cxx: "clang++",
-            build_gen: "Unix Makefiles"
-          }
+        # - {
+        #     name: "macOS Latest Release (Intel)",
+        #     os: macos-13,
+        #     build_type: "Release", cc: "clang", cxx: "clang++",
+        #     build_gen: "Unix Makefiles"
+        #   }
+        # - {
+        #     name: "macOS Latest Release (Apple Silicon)",
+        #     os: macos-latest,
+        #     build_type: "Release", cc: "clang", cxx: "clang++",
+        #     build_gen: "Unix Makefiles"
+        #   }
         - {
             name: "Windows Latest MSVC Release",
             os: windows-latest,
